--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<img class="logo" src=".\assets\proxeat logo.png">
+
+<p>Manger pas cher, local tout en préservant la planète</p>
+<button><img class="imagebutton" src=".\assets\boutton signup img.png" (click)="navigateToSignUp()">Sign Up</button>
+
