--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,1 @@
-<div><p> <fa-icon [icon]="faArrowLeft"></fa-icon> Page actuelle<fa-icon [icon]="faGear"></fa-icon></p></div>
+<div> <fa-icon [icon]="faArrowLeft"></fa-icon><p> Page actuelle</p><fa-icon [icon]="faGear"></fa-icon></div>
