--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,9 @@
 p {
-  background-color: rgb(30, 81, 40);
+  margin-top: auto;
+  margin-bottom: auto;
   color: white;
   font-weight : bold ;
-
+  font-size: 4vw;
 
 }
 .parametersimg
@@ -19,4 +20,20 @@ p {
   height : 50px;
   margin-left: 10px;
 
+}
+div{
+  padding-top: 3vw;
+  padding-bottom: 3vw;
+  background-color: rgb(30, 81, 40);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+fa-icon{
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 1vw;
+  margin-right: 1vw;
+  color: white;
+  font-size: 5vw;
 }
