--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,1 +1,31 @@
-<p>profil works!</p>
+<div class="wrapper">
+    <div class="profile-top">
+      <div class="profile-image"></div>
+    </div>
+
+    <div class="profile-bottom">
+      <div class="profile-infos">
+        <div class="main-infos">
+          <h3 class="name">Thomas Calmettes</h3>
+          <p class="age grey">21</p>
+        </div>
+        <p class="email">thomas.calmettes@gmail.com</p>
+        <p class="ville"><!-- icon--> Paris</p> 
+      </div>
+
+      <div class="profile-stats">
+        <div class="stat-item">
+          <p class="stat">120</p>
+          <p class="grey">Commandes</p>
+        </div>
+        <div class="stat-item">
+          <p class="stat">45</p>
+          <p class="grey">Avis</p>
+        </div>
+        <div class="stat-item">
+          <p class="stat">1003 Kilo</p>
+          <p class="grey">Carbonne sauvé</p>
+        </div>
+      </div>
+    </div>
+  </div>
