--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<nav class="nav">
+    <a href="#producteur" class="nav__link nav__link--active">
+      <i class="material-icons nav__icon">airport_shuttle</i>
+      <span class="nav__text">Producteurs</span>
+    </a>
+    <a href="#commande" class="nav__link">
+      <i class="material-icons nav__icon">receipt</i>
+      <span class="nav__text">Commandes</span>
+    </a>
+    <a href="#profil" class="nav__link">
+      <i class="material-icons nav__icon">account_circle</i>
+      <span class="nav__text">Profile</span>
+    </a>
+  </nav>
