--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
 <img class="logo" src=".\assets\proxeat logo.png">
 
-<p>Manger pas cher, local tout en préservant la planète</p>
-<button><img class="imagebutton" src=".\assets\fork.png" (click)="navigateToSignUp()">Sign Up</button>
-
+<div><p>Manger pas cher, local tout en préservant la planète</p>
+<button (click)="navigateToSignUp()"><img class="imagebutton" src=".\assets\fork.png" >Sign Up</button></div>
