--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<app-header></app-header>
+<body>
+  <br><br>
+
+<div class="cercleicon"> <fa-icon [icon]="faCircle"></fa-icon><fa-icon [icon]="faCircle"></fa-icon><fa-icon [icon]="faCircle"></fa-icon><p class="cercleicon"> Login</p><fa-icon [icon]="faCircle"></fa-icon><fa-icon [icon]="faCircle"></fa-icon><fa-icon [icon]="faCircle"></fa-icon>
+</div>   <br><br><br><br>
+<div class="center"></div>
+<form method="post">
+  <div class="txt_field">
+    <input type="text" required>
+    <span></span>
+    <label>Email</label>
+  </div>
+  <br>
+  <div class="txt_field">
+    <input type="password" required>
+    <span></span>
+    <label>Password</label>
+  </div>
+  <input type="submit" value="Login">
+
+
+</form>
+
+
+</body>
