--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,18 @@
-<div class="full" id="map">
+<div class="test">
+  <app-header></app-header>
 
+  <section>
+      <div>
+          <form>
+              <div class="form-item">
+                  <input type="text" placeholder="Adresse : " name="sender" required>
+              </div>
+              <div class="form-item">
+                  <button class="submit-btn" onclick="getValue();">Rechercher</button>
+              </div>
+          </form>
+      </div>
+  </section>
 </div>
+
+<div class="full" id="map"></div>
