--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -22,12 +22,16 @@ p {
 
 }
 div{
+
+  position: fixed;
   padding-top: 3vw;
   padding-bottom: 3vw;
   background-color: rgb(30, 81, 40);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
+  top:0vw;
 }
 fa-icon{
   margin-top: auto;
