--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,21 +1,20 @@
 button {
-  display: inline-block;
   background-color: rgb(78, 159, 51);
   border-radius: 10px;
   border: 4px double #cccccc;
   color: #eeeeee;
   text-align: center;
   font-size: 28px;
-  padding: 1px;
   width: 280px;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 30px;
   font-weight : bold ;
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 button:hover {
   background-color: green;
@@ -27,9 +26,15 @@ button:hover {
   height : 25px;
 }
 
-p {
-  margin: 35px;
-}
 .logo {
-  margin: 20px;
+  /* display: block; */
+ width: 100%;
+}
+div {
+  display: block;
+  margin-right: auto;
+  width: 100%;
+}
+p{
+ text-align: center;
 }
