--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,4 +1,55 @@
+section {
+  width: 100%;
+  /* background-color: #4E9F3D; */
+}
+.test{
+  max-height: 100%;
+}
+label, input {
+  font-family: 'Poppins', sans-serif;
+}
+
+label {
+
+  left: 2%;
+  color: #999;
+  font-size: clamp(14px, 1.5vw, 18px);
+  pointer-events: none;
+  user-select: none;
+}
+
+input {
+  width: 100%;
+  outline: 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  padding: 10px 10px;
+  font-size: clamp(15px, 1.5vw, 18px);
+}
+
+
+.submit-btn {
+  background-color: #4E9F3D;
+  filter: drop-shadow(2px 2px 3px #0003);
+  color: #fff;
+  font-family: "Poppins",sans-serif;
+  font-size: clamp(16px, 1.6vw, 18px);
+  display: block;
+  padding: 12px 20px;
+  margin: 2px auto;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  user-select: none;
+  transition: 0.2s;
+}
+
 .full {
-    width: 100vw;
-    height: 100vh;
+  margin-top: 10px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 89%;
   }
