--- a/src/app/producteur-list/producteur-list.component.html
+++ b/src/app/producteur-list/producteur-list.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <div *ngFor="let producteur of producteurList">
   <app-producteur-card
   [producteur]="producteur"></app-producteur-card>
