menu et historique

--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -1,1 +1,12 @@
-<p>historique works!</p>
+<p>Historique de Commande</p>
+
+<h1>Nos produits locaux :</h1>
+<div>
+<div class="card">
+    <img class="imgRond" src="./assets/boulangerie.jpg"><p>Boulangerie - Prix</p><img/>
+    <p>Heure de ramassage</p>
+    
+
+</div>
+<hr>
+
