--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,17 +7,17 @@
 <div class="center"></div>
 <form method="post">
   <div class="txt_field">
-    <input type="text" required>
+    <input type="email" #mail required>
     <span></span>
     <label>Email</label>
   </div>
   <br>
   <div class="txt_field">
-    <input type="password" required>
+    <input type="password" #pssword required>
     <span></span>
     <label>Password</label>
   </div>
-  <input type="submit" value="Login">
+  <input type="button" value="Login" (click)="authService.SignIn(mail.value, pssword.value)">
 
 
 </form>
