--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -111,7 +111,7 @@ form .txt_field{
   text-decoration: underline;
 }
 
-input[type="submit"]{
+input[type="button"]{
   width: 100%;
   height: 50px;
   border: 1px solid;
