--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -7,10 +7,9 @@
       <div class="profile-infos">
         <div class="main-infos">
           <h3 class="name">Thomas Calmettes</h3>
-          <p class="age grey">21</p>
         </div>
         <p class="email">thomas.calmettes@gmail.com</p>
-        <p class="ville"><!-- icon--> Paris</p> 
+        <p class="ville">Tarbes</p> 
       </div>
 
       <div class="profile-stats">
@@ -29,3 +28,4 @@
       </div>
     </div>
   </div>
+<app-footer></app-footer>
