--- a/src/app/reglement/reglement.component.html
+++ b/src/app/reglement/reglement.component.html
@@ -1,1 +1,47 @@
-<p>reglement works!</p>
+<app-header></app-header>
+<h1>Votre Commande :</h1>
+<div>
+<div class="card">
+  <fa-icon [icon]="faTrash"></fa-icon>
+    <div class="name"><p>Nom : Baguette</p></div>
+    <div><p>Prix : 1€</p></div>
+
+</div>
+<hr>
+<div>
+  <div class="card">
+    <fa-icon [icon]="faTrash"></fa-icon>
+    <div class="name"><p>Nom : Croissant</p></div>
+    <div><p>Prix : 0,80€</p></div>
+</div>
+  <hr>
+<div>
+  <div class="card">
+    <fa-icon [icon]="faTrash"></fa-icon>
+    <div class="name"><p>Nom : Pain au chocolat</p></div>
+    <div><p>Prix : 0,80€</p></div>
+</div>
+    <hr> 
+
+<div>
+  <div class="card">
+    <fa-icon [icon]="faTrash"></fa-icon>
+    <div class="name"><p>Nom : Mille-Feuille</p></div>
+    <div><p>Prix : 1,40€</p></div>
+
+</div>
+    <hr>
+<div>
+  </div>
+  <div class="card">
+    <fa-icon [icon]="faTrash"></fa-icon>
+    <div class="name"><p>Nom : Pain au Raisin</p></div>
+    <div><p>Prix : 0,90€</p></div>
+</div>
+    <hr>
+
+  </div>
+</div>
+
+<div class="payment" id="payments"></div>
+<input type="submit" value="Valider">
