--- a/src/app/edit-profil/edit-profil.component.html
+++ b/src/app/edit-profil/edit-profil.component.html
@@ -1,1 +1,19 @@
-<p>edit-profil works!</p>
+<app-header></app-header>
+<div class="centre">
+    <div class=" profile tabShow ">
+        <h1> Votre Profil </h1>
+        <h2> Nom Complet </h2>
+        <input type="text" class="input" value="Toto">
+
+        <h2> Email </h2>
+        <input type=" text " class=" input " value=" example@example.com ">
+
+        <h2> Password </h2>
+        <input type=" password " class=" input " value=" Mot de passe ">
+
+        <h2> Telephone </h2>
+        <input type=" number " class=" input " value=" 0635180675 ">
+
+        <button class=" btn "> Modifier </button>
+    </div>
+</div>
