--- a/src/app/edit-profil/edit-profil.component.css
+++ b/src/app/edit-profil/edit-profil.component.css
@@ -14,7 +14,9 @@ h1 {
     font-size: 1.2rem;
     margin-top: 40px;
     margin-bottom: 35px;
-    margin-left: 39%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -38,6 +40,9 @@ h2 {
     color: #070707;
     outline: none;
     margin-bottom: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .btn {
     font-family : "roboto" ,sans-serif;
@@ -51,5 +56,7 @@ h2 {
     rgba(0,0,0,.2);
     cursor : pointer;
     margin-top: 15px;
-    margin-left: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
