[BACK] Reglement, confirmation, historique

--- a/src/app/confirmation/confirmation.component.html
+++ b/src/app/confirmation/confirmation.component.html
@@ -1,15 +1,15 @@
 <div><img class="deliveryimg" src=".\assets\deliveryimg.png">
 
     <h1>Commande réussie</h1>
-    <p>Merci d'avoir commandé à partir de l'application Prox'Eat ! 
+    <p>Merci d'avoir commandé à partir de l'application Prox'Eat !
         Votre commande sera disponible à l'endroit suivant.</p>
-    
+
     <h2 class="categoriecommande">Producteur :</h2>
-    <p class="bddnom">Nom du Producteur en BDD</p>
+    <p class="bddnom">{{name}}</p>
     <h3 class="categoriecommande">Localisation :</h3>
     <p class="bddloca">Localisation en BDD</p>
     <h4 class="categoriecommande">Heure de prise en charge :</h4>
-    <p class="bddcate">  .. : ..  en BDD</p>
-    
+    <p class="bddcate">  {{heure}}</p>
+
     <button><img class="imagebutton" src=".\assets\boutton terminer img.png">Terminer</button>
-    </div>  
+    </div>
