--- a/src/app/edit-profil/edit-profil.component.html
+++ b/src/app/edit-profil/edit-profil.component.html
@@ -54,6 +54,6 @@
     >
       Modifier
     </button>
-    <button class="btn">Deconexion</button>
+    <button class="btn" (click)="signOut()">Deconnexion</button>
   </div>
 </div>
