--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,1 @@
-<div> <fa-icon [icon]="faArrowLeft" (click)="onReturn()"></fa-icon><p> {{current}}</p><fa-icon [icon]="faGear"></fa-icon></div>
+<div> <fa-icon [icon]="faArrowLeft" (click)="onReturn()"></fa-icon><p> {{current}}</p><fa-icon [icon]="faGear" [routerLink]="['/modifProfil']"></fa-icon></div>
