--- a/src/app/producteur-list/producteur-list.component.html
+++ b/src/app/producteur-list/producteur-list.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<div class="header"></div>
 <div *ngFor="let producteur of (producteurList$|async)">
   <app-producteur-card
   [producteur]="producteur"></app-producteur-card>
