--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -6,10 +6,10 @@
     <div class="profile-bottom">
       <div class="profile-infos">
         <div class="main-infos">
-          <h3 class="name">Thomas Calmettes</h3>
+          <h3 class="name">{{userData.displayName}}</h3>
         </div>
-        <p class="email">thomas.calmettes@gmail.com</p>
-        <p class="ville">Tarbes</p> 
+        <p class="email">{{userData.email}}</p>
+        <p class="ville">Tarbes</p>
       </div>
 
       <div class="profile-stats">
