--- a/src/app/detail-menu/detail-menu.component.css
+++ b/src/app/detail-menu/detail-menu.component.css
@@ -1,55 +1,71 @@
 .boulangerie {
-    width: 80%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border: 5px solid black;
-    margin-top: 20vw;
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 5px solid black;
+  margin-top: 20vw;
 }
 h1 {
-    padding-top: 4%;
-    padding-left: 2%;
-    color: gray;
-    font-size: 4vw;
-    text-align: center;
+  padding-top: 4%;
+  padding-left: 2%;
+  color: gray;
+  font-size: 4vw;
+  text-align: center;
+  font-weight: bold;
 }
 
 .card{
 
-    font-size: 3vw;
-    margin-left: 5vw;
-  }
+  font-size: 3vw;
+  margin-left: 5vw;
+}
 
- p {
-    margin-left: 15vw;
- }
+p {
+  margin-left: 15vw;
+}
 
- fa-icon {
-    color: green;
-    margin-left: 15vw;
-    position: absolute;
-    right: 7vw;
-    font-size:5vw;
-    margin-top: 5vw;
+fa-icon {
+  color: green;
+  margin-left: 15vw;
+  position: absolute;
+  right: 7vw;
+  font-size:5vw;
+  margin-top: 5vw;
 
- }
+}
 
- .validebtn {
-    margin-top: 10vw;
-    color: #4E9F3D;
-    font-size: 3vw;
-    text-align: center;
-  }
+.validebtn {
+  margin-top: 10vw;
+  color: #4E9F3D;
+  font-size: 3vw;
+  text-align: center;
+}
 
-  input[type="submit"]{
-    width: 100%;
-    height: 50px;
-    border: 1px solid;
-    background: #4E9F3D;
-    border-radius: 25px;
-    font-size: 18px;
-    color: #e9f4fb;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
-  }
+input[type="submit"]{
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #4E9F3D;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+}
+h2 {
+  padding-left: 2%;
+  color: gray;
+  font-size: 4vw;
+  text-align: center;
+  font-weight: bold;
+}
+.name2 {
+  font-size: 4vw;
+}
+
+.prix {
+  margin-inline: block;
+  margin-left: 15vw;
+}
