--- a/src/app/producteur-card/producteur-card.component.html
+++ b/src/app/producteur-card/producteur-card.component.html
@@ -1,6 +1,12 @@
 <div class="card">
-  <div class="name"><p class="insideName">{{producteur?.name}}</p></div>
-  <div ><img class="photo" src="{{producteur?.photoDevanture}}" alt=""></div>
+  <div class="name" [ngClass]="{'mobile-layout': isMobileLayout}">
+    <p class="insideName">{{producteur?.name}}</p>
+    <button class="btn-like" (click)="toggleLike()">
+      <i class="fas fa-heart heart-icon" [ngClass]="{'liked': liked}"></i>
+    </button>
+    <p>{{ producteurLikesCount }} likes.</p>
+  </div>
+  <div><img class="photo" src="{{producteur?.photoDevanture}}" alt=""></div>
   <div class="loc"><p>Actuellement à : {{producteur?.localisationClear}}</p></div>
   <div class="horaire"><p>Horaire: {{producteur?.horaires}}</p></div>
   <div class="description">{{producteur?.description}}</div>
