--- a/src/app/producteur-card/producteur-card.component.css
+++ b/src/app/producteur-card/producteur-card.component.css
@@ -1,33 +1,72 @@
-.card{
+.card {
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
-
   border-radius: 2.5%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   width: 98%;
   margin-bottom: 5vw;
 }
-.photo{
+
+.photo {
   width: 100%;
 }
-.name{
-  padding-top: 3vw;
-  padding-bottom: 3vw;
+
+.name {
+  display: flex;
+  align-items: center;
+  padding: 3vw;
+  justify-content: flex-start;
   background-color: black;
   color: white;
   font-size: 4vw;
 }
-.insideName{
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 0;
-  margin-left: 5vw;
+
+.insideName {
+  margin: 0 5vw 0 0;
 }
-.button{
+
+.like-btn {
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.heart-icon {
   position: relative;
-  float: right;
+  display: inline-block;
+  width: 9vw;
+  height: 9vw;
+  color: gray;
+  transition: color 0.3s;
+  font-size: 9vw;
 }
+
+.heart-icon::before,
+.heart-icon::after {
+  position: absolute;
+  content: '';
+  width: 50%;
+  height: 100%;
+  border: 1px solid white;
+  top: 0;
+}
+
+.heart-icon::before {
+  left: 0;
+  border-radius: 50% 50% 0 0;
+  transform: rotate(-45deg);
+}
+
+.heart-icon::after {
+  right: 0;
+  border-radius: 50% 50% 0 0;
+  transform: rotate(45deg);
+}
+
+.heart-icon.liked {
+  color: green;
+}
+
 .btnSection {
   margin-bottom: 1vw;
   grid-area: 6 / 1 / 7 / 4;
@@ -35,6 +74,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .btnSection1 {
   display: block;
   width: 200px;
@@ -46,4 +86,23 @@
   align-items: center;
   color: #e2e2e2;
   border-radius: 5px;
+}
+
+.btn-like {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-like i {
+  color: gray;
+  transition: color 0.3s;
+  font-size: 24px;
+}
+
+.btn-like:hover i {
+  color: green;
 }
