--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <img class="logo" src=".\assets\proxeat logo.png">
-
-<div><p>Manger pas cher, local tout en préservant la planète</p>
-<button (click)="navigateToSignUp()"><img class="imagebutton" src=".\assets\fork.png" >Sign Up</button></div>
+ 
+<div class="container">
+    <p class="text">Manger pas cher et avec des produits locaux, tout en préservant la planète<span class="logo"><img src=".\assets\R.png" alt="Smiley" class="image-inline"></span></p>
+</div>
+<button (click)="navigateToSignUp()"><img class="imagebutton" src=".\assets\fork.png" >Sign Up</button>
