--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,31 +1,35 @@
 <div class="wrapper">
-    <div class="profile-top">
-      <div class="profile-image"></div>
-    </div>
-
-    <div class="profile-bottom">
-      <div class="profile-infos">
-        <div class="main-infos">
-          <h3 class="name">{{userData.displayName}}</h3>
-        </div>
-        <p class="email">{{userData.email}}</p>
-        <p class="ville">Tarbes</p>
+  <div class="profile-top">
+    <div class="profile-image"></div>
+  </div>
+  <div class="profile-bottom">
+    <div class="profile-infos">
+      <div class="main-infos">
+        <h3 class="name">{{userData.displayName}}</h3>
       </div>
-
-      <div class="profile-stats">
-        <div class="stat-item">
-          <p class="stat">120</p>
-          <p class="grey">Commandes</p>
-        </div>
-        <div class="stat-item">
-          <p class="stat">45</p>
-          <p class="grey">Avis</p>
-        </div>
-        <div class="stat-item">
-          <p class="stat">1003 Kilo</p>
-          <p class="grey">Carbonne sauvé</p>
-        </div>
+      <p class="email">{{userData.email}}</p>
+      <p class="ville">Tarbes</p>
+    </div>
+    <div class="profile-stats">
+      <div class="stat-item">
+        <p class="stat">120</p>
+        <p class="grey">Commandes</p>
+      </div>
+      <div class="stat-item">
+        <p class="stat">45</p>
+        <p class="grey">Avis</p>
+      </div>
+      <div class="stat-item">
+        <p class="stat">1003 Kilo</p>
+        <p class="grey">Carbone sauvÃ©</p>
       </div>
     </div>
   </div>
+</div>
+
+<div class="social-links">
+  <a href="https://www.tiktok.com/" target="_blank"><img src=".\assets\tiktok-logo-icon.png" alt="TikTok"></a>
+  <a href="https://www.linkedin.com/" target="_blank"><img src=".\assets\linkedin-logo.png" alt="LinkedIn"></a>
+  <a href="https://www.instagram.com/" target="_blank"><img src=".\assets\Instagram-logo.png" alt="Instagram"></a>
+</div>
 <app-footer></app-footer>
