--- a/src/app/profil/profil.component.css
+++ b/src/app/profil/profil.component.css
@@ -1,5 +1,3 @@
-
-
 * {
   margin: 0;
   padding: 0;
@@ -32,7 +30,7 @@ body {
 
 .profile-top {
   height: 250px;
-  width: 500px;
+  width: 100%;
   background-image: url("src/assets/couvertureprofil.png");
   background-position: center;
   background-size: cover;
@@ -40,25 +38,23 @@ body {
 }
 
 .profile-image {
-  /* background-image: url("src/assets/愛.png"); */
+  background-image: url("src/assets/photo-profil_301783868.jpg");
   background-position: center;
   background-size: cover;
-  /* position: relative; */
   width: 150px;
   height: 150px;
   overflow: hidden;
   border-radius: 50%;
   border: 3px solid black;
   position: absolute;
-  bottom: 0;
-  left: 38%;
-  transform: translate(-50%, 50%);
-  margin-left: auto;
-  margin-right: auto;
+  bottom: -50%;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 50px;
 }
 
 .profile-bottom {
-  margin-top: 75px;
+  margin-top: 30px;
   padding: 25px;
   display: flex;
   flex-direction: column;
@@ -89,12 +85,13 @@ body {
   margin-bottom: 75px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
 }
 
 .ville ion-icon {
   margin-right: 5px;
   color: #388eff;
+  vertical-align: middle;
 }
 
 .profile-stats {
@@ -110,4 +107,20 @@ body {
 .stat {
   font-size: 20px;
   font-weight: 700;
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-links a {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.social-links img {
+  height: 40px; /* Ajustez la taille des images selon vos préférences */
+  width: auto; /* Laissez la largeur automatique pour maintenir le rapport d'aspect */
 }
