--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -1,13 +1,30 @@
-<p>Historique de Commande</p>
-
+<app-header></app-header>
+<div class="header"></div>
 <h1>Nos produits locaux :</h1>
-<div>
-<div class="card">
-    <img class="imgRond" src="./assets/boulangerie.jpg"><p>Boulangerie - Prix</p><img/>
-    <p>Heure de ramassage</p>
-    
 
+<div>
+    <div class="card">
+        <div class="image">
+            <img class="imgRond" src="./assets/boulangerie.jpg"><img/>
+        </div>
+        <div class="text">
+            <p>Boulangerie - Prix</p>
+            <p>Heure de ramassage</p>
+        </div>
+    </div>
+</div>
+<hr>
+
+<div>
+    <div class="card">
+        <div class="image">
+            <img class="imgRond" src="./assets/boulangerie.jpg"><img/>
+        </div>
+        <div class="text">
+            <p>Boulangerie - Prix</p>
+            <p>Heure de ramassage</p>
+        </div>
+    </div>
 </div>
 <hr>
 <app-footer></app-footer>
-
