--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -19,7 +19,7 @@ p {
   width : 50px;
   height : 50px;
   margin-left: 10px;
-
+  
 }
 div{
   position: fixed;
@@ -39,4 +39,20 @@ fa-icon{
   margin-right: 1vw;
   color: white;
   font-size: 5vw;
+  cursor: pointer;
+}
+
+@media (min-width: 769px) {
+  
+  div{
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  p{
+    font-size: 30px;
+  }
+  fa-icon{
+    font-size: 30px;
+  }
 }
