--- a/src/app/historique/historique.component.css
+++ b/src/app/historique/historique.component.css
@@ -6,12 +6,29 @@
     border: 2px solid black;
 }
 
+h1{
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
 p{ 
-    bottom: 0;
-    position: relative;
     color: #424242;
     font-size: 12px;
+    margin: 0;
 }
+.header{
+    height:6vh ;
+  }
+
+.title{
+    color:white;
+    text-align: center;
+    font-size: 15px;
+    background-color: #1e5128;
+    margin: 0;
+    font-weight: bold;
+}
+
 
 .SDL{
     color: #000000;
@@ -20,9 +37,29 @@ p{
 
 .card{
     display: grid ;
-    grid-column: 2;
-    grid-row: 2;
+    grid-template-columns: 50px auto;
+    align-items: center;
+
     font-size: 3vw;
     margin-left: 5vw;
-  }
-  
+
+}
+
+@media (min-width: 768px) {
+    h1{
+        font-size: 2vw;
+    }
+
+    p{ 
+        font-size: 1.5vw;
+        margin-top: 1vw;
+        margin-bottom: 20px;
+        margin-left: 100px;
+    }
+
+    .imgRond{
+        width: 100px;
+        height: 100px;
+    }
+
+}
