--- a/src/app/producteur-card/producteur-card.component.css
+++ b/src/app/producteur-card/producteur-card.component.css
@@ -1,70 +1,40 @@
-.card {
+.card{
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
+
   border-radius: 2.5%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: 98%;
+  width: 400px;
   margin-bottom: 5vw;
 }
 
 .photo {
   width: 100%;
+  height: 15vw;
 }
 
-.name {
-  display: flex;
-  align-items: center;
-  padding: 3vw;
-  justify-content: flex-start;
+.name{
+  padding :20px;
   background-color: black;
   color: white;
-  font-size: 4vw;
+  font-size: 30px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+
 }
 
-.insideName {
-  margin: 0 5vw 0 0;
+.insideName{
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
+  margin-left: 1vw;
 }
 
-.like-btn {
-  margin-left: auto;
-  cursor: pointer;
-}
-
-.heart-icon {
+.button{
   position: relative;
-  display: inline-block;
-  width: 9vw;
-  height: 9vw;
-  color: gray;
-  transition: color 0.3s;
-  font-size: 9vw;
-}
-
-.heart-icon::before,
-.heart-icon::after {
-  position: absolute;
-  content: '';
-  width: 50%;
-  height: 100%;
-  border: 1px solid white;
-  top: 0;
-}
-
-.heart-icon::before {
-  left: 0;
-  border-radius: 50% 50% 0 0;
-  transform: rotate(-45deg);
-}
-
-.heart-icon::after {
-  right: 0;
-  border-radius: 50% 50% 0 0;
-  transform: rotate(45deg);
-}
-
-.heart-icon.liked {
-  color: green;
+  float: right;
 }
 
 .btnSection {
@@ -73,19 +43,41 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .btnSection1 {
   display: block;
   width: 200px;
   height: 30px;
+  border: 1px solid;
   background: #4E9F3D;
   text-decoration: none;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #e2e2e2;
-  border-radius: 5px;
+  outline: none;
+  border-radius: 25px;
+  background-position: center;
+  transition: 0.8s;
+}
+
+.btnSection1:hover{
+  background: #5ec04a radial-gradient(circle, transparent 1%, #5ec04a 1%) center/15000%;
+  cursor:pointer;
+}
+
+.info-card{
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+
+.loc p,
+.horaire p,
+.description {
+  font-size: 0.9vw;
 }
 
 .btn-like {
@@ -95,14 +87,52 @@
   background: none;
   border: none;
   cursor: pointer;
+  float: right;
 }
 
-.btn-like i {
-  color: gray;
-  transition: color 0.3s;
-  font-size: 24px;
+
+.like {
+  margin-left: 1vw;
 }
 
-.btn-like:hover i {
-  color: green;
+.like-count {
+  margin-LEFT: 9vw;
+}
+.like-btn {
+  margin-left: auto;
+  right: 1vw;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .card{
+    width: 98%;
+    height: auto;
+  }
+
+  .name{
+    padding:3vw;
+    font-size: 4vw;
+  }
+  .photo {
+    width: 100%;
+    height: 100%;
+  }
+
+.loc p,
+.horaire p,
+.description {
+  font-size: 4vw;
+}
+
+.insideName{
+  margin:0 0 0 0;
+}
+
+
+.like-count {
+  margin-LEFT: 67vw;
+}
+
+
 }
