--- a/src/app/producteur-list/producteur-list.component.html
+++ b/src/app/producteur-list/producteur-list.component.html
@@ -1,10 +1,13 @@
 <app-header></app-header>
 <div class="header"></div>
-<div *ngFor="let producteur of (sortedProducteurs$|async)">
-  <app-producteur-card
-  [producteur]="producteur"></app-producteur-card>
-</div>
+<div class="search-container">
+  <input class="search-input" type="text" [(ngModel)]="searchTerm" (input)="onSearch()" (keyup)="onSearch()" placeholder="Rechercher un producteur...">
 
-<hr><hr><hr><hr><hr>
+</div>
+<div class="container" >
+  <div *ngFor="let producteur of (sortedProducteurs$|async)">
+    <app-producteur-card class="card" [producteur]="producteur"></app-producteur-card>
+  </div>
+</div>
 
 <app-footer></app-footer>
