--- a/src/app/reglement/reglement.component.html
+++ b/src/app/reglement/reglement.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<div class="header"></div>
 <h1>Votre Commande :</h1>
 <div *ngFor="let history of productHistory;let index = index">
 <div class="card" *ngIf="history.quantity>0">
@@ -10,7 +11,7 @@
 </div>
 <hr>
 </div>
-<hr>
+
 <div class="total">
   <p>Total : {{total}} €</p>
 </div>
